--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Homework #3</title>
+    <title>Learn german</title>
   </head>
   <body>
     <div id="app"></div>
